--- a/app/src/main/res/layout/cat_toast.xml
+++ b/app/src/main/res/layout/cat_toast.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/catFoodLayout"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
+              android:background="#DAAA"
               android:layout_height="match_parent">
 
 
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/sherlock"
             android:id="@+id/imageViewCatFood"/>
     <TextView
             android:text="@string/catFood"
