--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
+              android:gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <Button android:layout_width="wrap_content"
+            android:id="@+id/buttonMenu"
+            android:text="@string/buttonMenuText"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"/>
+
+    <TextView
+            android:id="@+id/textViewMenu"
+            android:text="@string/textViewMenu"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"/>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/star_big_on"
+            android:layout_marginTop="10dp"
+            android:id="@+id/imageViewMenu"/>
 
 </LinearLayout>
